Fix bugs: <Any> in second element of constraint never matched the structural option Allowed a syllable without a nucleus to be considered valid.

--- a/src/org/sil/syllableparser/resources/SyllableParser_en.properties
+++ b/src/org/sil/syllableparser/resources/SyllableParser_en.properties
@@ -601,6 +601,7 @@ report.tawotdetails=The evaluation of constraints (shown via candidate grids) an
 report.tawotinitialization=Initialization
 report.tawothousekeeping=Word initial/word final Housekeeping
 report.tawotaddsyllable=Adding syllable: {0}.
+report.tawotnonucleusinsyllable=Syllabification failed because a syllable did not have a nucleus.
 report.tawotsomesegmentsareambiguous=Syllabification failed because one or more segments had two or more structural options left.
 report.tawotunparsedsegments=Syllabification failed because one or more segments were unparsed.
 report.tawotnoconstraints=Syllabification failed because there are no constraints.  Please add some.
