--- a/src/org/sil/syllableparser/resources/SyllableParser_es.properties
+++ b/src/org/sil/syllableparser/resources/SyllableParser_es.properties
@@ -602,6 +602,7 @@ report.tawotdetails=A continuación se muestra la evaluación de las restricciones
 report.tawotinitialization=Inicialización
 report.tawothousekeeping=Palabra inicial/palabra final Limpieza de la casa
 report.tawotaddsyllable=Añadir sílaba: {0}.
+report.tawotnonucleusinsyllable=La silabación falló porque una sílaba no tenía núcleo.
 report.tawotsomesegmentsareambiguous=La silabación falló porque uno o más segmentos tenían dos o más opciones estructurales.
 report.tawotunparsedsegments=La silabación falló porque uno o más segmentos no fueron analizados.
 report.tawotnoconstraints=La silabación ha fallado porque no hay restricciones.  Por favor, añada algunas.
