If NP Rules or OT Constraints are empty, ask to create default set

--- a/src/org/sil/syllableparser/resources/SyllableParser_es.properties
+++ b/src/org/sil/syllableparser/resources/SyllableParser_es.properties
@@ -311,6 +311,7 @@ label.moraicfilterwarning=ADVERTENCIA: Sólo se implementan filtros de inicio par
 label.moraictemplatewarning=ADVERTENCIA: Las plantillas de rima, núcleo y coda no están implementadas para el enfoque moraico.
 label.maxmoras=Máximo de moras por sílaba
 label.npfilterwarning=ADVERTENCIA: Sólo se implementan filtros de fallo para el enfoque NP.
+label.npsetdefaultrules=Todavía no hay reglas.  Quieres crear un conjunto de reglas por defecto?
 label.nprule.action=Acción
 label.nprule.affectedsegmentornaturalclass=Afectado
 label.nprule.context=Contexto
@@ -427,7 +428,8 @@ label.affectedelement1=Elemento afectado 1
 label.affectedelement2=Elemento afectado 2
 label.any=<Cualquier>
 label.anydescription=[Indica que cualquier segmento coincidirá con esta parte de la restricción.]
-label.otconstrainttree=Diagram
+label.otconstrainttree=Diagrama
+label.otsetdefaultconstraints=Todavía no hay restricciones.  Desea crear un conjunto de restricciones por defecto?
 label.pruneelement2=Podar el elemento 2
 label.structuraloptions1=Structural options 1
 label.structuraloptions2=Structural options 2
