Add tooltips for predicted to total status bar items (word view)

--- a/src/org/sil/syllableparser/resources/SyllableParser_es.properties
+++ b/src/org/sil/syllableparser/resources/SyllableParser_es.properties
@@ -468,6 +468,8 @@ tooltip.filtercorrectsyllablebreaks=Filtrar las silabificaciones correctas
 tooltip.filterpredictedsyllablebreaks=Filtrar las silabificaciones predicadas
 tooltip.filterwords=Filtrar las palabras
 tooltip.removeallfilters=Eliminar todos los filtros
+tooltip.predictedtototal=Parsos previstos / totales
+tooltip.predictedequalscorrecttototal=Predicción es igual a correcto / Total de parses
 
 #Radio buttons
 radio.current=La implementación actual
