--- a/src/org/sil/syllableparser/resources/SyllableParser_fr.properties
+++ b/src/org/sil/syllableparser/resources/SyllableParser_fr.properties
@@ -470,6 +470,8 @@ tooltip.filtercorrectsyllablebreaks=Filter Correct Syllable breaks
 tooltip.filterpredictedsyllablebreaks=Filter Predicted Syllable breaks
 tooltip.filterwords=Filter Words
 tooltip.removeallfilters=Remove All Filters
+tooltip.predictedtototal=Predicted / Total parses
+tooltip.predictedequalscorrecttototal=Predicted equals correct / Total parses
 
 #Radio buttons
 radio.current=Implémentation actuel 
