Improve empty list message when converting predicted to correct parses

--- a/src/org/sil/syllableparser/resources/SyllableParser_es.properties
+++ b/src/org/sil/syllableparser/resources/SyllableParser_es.properties
@@ -255,7 +255,7 @@ label.choosepredicted=Elija el que predijo silabificaciónes convertir corregir s
 label.shsyllabificationfailure=Fracaso: no se pudieron analizar los segmentos en sílabas
 label.oncsyllabificationfailure=Fracaso: no se pudieron analizar los segmentos en sílabas
 # menu.syllabifywords goes at the end of the following message
-label.nopredicted=No hay silabificaciónes predichos.\nO bien no hay palabras,\ntodas las palabras no lograron silabear,\no usted necesita para invocar 
+label.nopredicted=No hay silabeo predicho. \nO bien no hay palabras,\nlos valores predichos son los mismos que los valores correctos para todas las palabras con un valor predicho,\ntodas las palabras fallaron en el silabeo,\no necesita invocar  
 label.wordtofind=Palabra para buscar: 
 label.wordpredictedvscorrect=Predicción vs. silabeo correcta
 # menu.syllabifywords goes at the end of the following message
