Add tool tip for record count in status bar

--- a/src/org/sil/syllableparser/resources/SyllableParser_es.properties
+++ b/src/org/sil/syllableparser/resources/SyllableParser_es.properties
@@ -470,6 +470,7 @@ tooltip.filterwords=Filtrar las palabras
 tooltip.removeallfilters=Eliminar todos los filtros
 tooltip.predictedtototal=Parsos previstos / totales
 tooltip.predictedequalscorrecttototal=Predicción es igual a correcto / Total de parses
+tooltip.numbertototal=Número actual de registros / Total de registros
 
 #Radio buttons
 radio.current=La implementación actual
