--- a/src/org/sil/syllableparser/resources/SyllableParser_fr.properties
+++ b/src/org/sil/syllableparser/resources/SyllableParser_fr.properties
@@ -472,6 +472,7 @@ tooltip.filterwords=Filter Words
 tooltip.removeallfilters=Remove All Filters
 tooltip.predictedtototal=Predicted / Total parses
 tooltip.predictedequalscorrecttototal=Predicted equals correct / Total parses
+tooltip.numbertototal=Current record number / Total records
 
 #Radio buttons
 radio.current=Implémentation actuel 
