Add keyboard setting in UI

--- a/src/org/sil/syllableparser/resources/SyllableParser_es.properties
+++ b/src/org/sil/syllableparser/resources/SyllableParser_es.properties
@@ -169,6 +169,7 @@ label.cancel=Cancelar
 label.code=Código
 label.color=Color
 label.font=Fuente
+label.keyboard=Teclado
 label.general=General
 label.righttoleft=Derecha a izquierda
 label.help=Ayuda
