--- a/src/org/sil/syllableparser/resources/SyllableParser_fr.properties
+++ b/src/org/sil/syllableparser/resources/SyllableParser_fr.properties
@@ -202,6 +202,7 @@ label.filterpredictedsyllablebreaks=Filter predicted syllable breaks
 label.filterwords=Filter words
 label.filename=Nom de Fichier
 label.font=Police
+label.keyboard=Clavier
 label.general=General
 label.help=Aide
 label.hyphenationparameters=Paramètres d\u2019usage de traits d\u2019union pour {0}
